--- a/Aufgabe 1.1/index.html
+++ b/Aufgabe 1.1/index.html
@@ -13,8 +13,28 @@
     <h2> Mein Studium </h2>
     <p> Ich studiere Online Medien im zweiten Semester. Dies ist eine Mischung zwischen Medienkonzeption und Medieninformatik. </p>
     <a href="https://www.instagram.com/thats.anni/">Mein Instagram! </a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi. Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-    Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa. Fugit in asperiores laboriosam et. Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
+          Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
+    Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
+     Fugit in asperiores laboriosam et.
+      Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
+       Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
+ Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
+  Fugit in asperiores laboriosam et.
+   Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+   Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
+    Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
+Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
+Fugit in asperiores laboriosam et.
+Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
+ Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
+Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
+Fugit in asperiores laboriosam et.
+Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.</p>
      <a href="#me">Geh zu meiner Person</a> 
 </body>
 
