--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -14,38 +14,9 @@
           </ul>
      </nav>
      <h1>Kontakt</h1>
+     <h2>Sie können mich über Instagram kontaktieren...</h2>
+    <a href="https://www.instagram.com/thats.anni/"><img src="instalogo.jpg" alt="Das Logo von Instagram"></a>
 
-
-     
-     <img src="annika.jpg" alt="Das bin ich.">
-     <h2 id="me"> Meine Person </h2>
-     <p> Mein Name ist Annika König. Ich bin 19 Jahre alt und wohne derzeit in Furtwangen. </p>
-     <h2> Mein Studium </h2>
-     <p> Ich studiere Online Medien im zweiten Semester. Dies ist eine Mischung zwischen Medienkonzeption und Medieninformatik. </p>
-     <a href="https://www.instagram.com/thats.anni/">Mein Instagram! </a>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.
-               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.</p>
-          <a href="#me">Geh zu meiner Person</a> 
 </body>
 
 </html> 
