--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -14,11 +14,16 @@
           </ul>
      </nav>
     <h1>Meine Blender Arbeiten</h1>
+    <p> Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein U-Boot.
     <img src="ubootss.jpg" alt="Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein wunderschönes U-Boot.">
+    <p> Meine zweite Abgabe: Eine Schatztruhe mit einer Axt darin.
      <img src="truhe.jpg" alt="Meine zweite Abgabe: Eine Schatzttruhe mit Axt.">
     <p> Derzeit arbeite ich noch an meiner dritten Abgabe in Computergrafik & 3D-Modellierung. </p>
     <h1> Unser Planspiel-Unternehmen </h2>
+     <p>Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen stellen kann.
+          Es gibt viele verschiedene Sorten wie Schokolade, Spinat, Rind uvm.</p>
      <img src="Plakat.pdf" alt="Unser Maultaschen-Unternehmen">
+     <p>Hier habe ich mithilfe des positiv-negativ Verfahrens etwas zu dem 100 jährigen Jubiläum von Bauhaus erstellt.</p>
      <img src="Bauhaus.png" alt="Bauhaus 100 Jahre Jubiläum">
 
 </body>
