--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -16,6 +16,15 @@
      <h1>Kontakt</h1>
      <h2>Sie können mich über Instagram kontaktieren...</h2>
     <a href="https://www.instagram.com/thats.anni/"><img src="instalogo.jpg" alt="Das Logo von Instagram"></a>
+    <p>Auch auf anderen sozialen Medien bin ich:)</p>
+    <video src="socialmedia" controls ></video>
+    <p>Dazu passend:</p>
+    <img src="subscribe.jpg" >
+    <p>Derzeit wohne ich im schönen Schwarzwald.</p>
+    <img src="schwarzwald.jpg">
+    <p>Aber eigentlich komme ich von dem Bodensee.</p>
+    <img src="bodensee">
+    <p>Das wars zu meiner Person & meinem Kontakt!</p>
 
 </body>
 
