--- a/Aufgabe1.2/Über_mich.html
+++ b/Aufgabe1.2/Über_mich.html
@@ -16,32 +16,24 @@
      <h1>Das ist meine Website</h1>
      <img src="annika.jpg" alt="Das bin ich.">
      <h2 id="me"> Meine Person </h2>
-     <p> Mein Name ist Annika König. Ich bin 19 Jahre alt und wohne derzeit in Furtwangen. </p>
+     <p> Mein Name ist Annika König. Ich bin 20 Jahre alt und wohne derzeit in Furtwangen. </p>
      <h2> Mein Studium </h2>
      <p> Ich studiere Online Medien im zweiten Semester. Dies ist eine Mischung zwischen Medienkonzeption und Medieninformatik. </p>
-     <a href="https://www.instagram.com/thats.anni/">Mein Instagram! </a>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.
-               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Adipisci nulla neque debitis id repellendus quae veniam, earum est sequi.
-               Culpa quas sint laudantium reiciendis alias delectus, nobis ipsa rem incidunt?
-               Veritatis animi iste molestiae ad exercitationem tenetur sit ex, vel quisquam labore nihil corrupti voluptates culpa.
-               Fugit in asperiores laboriosam et.
-               Quibusdam beatae possimus pariatur iure praesentium tempora repudiandae nisi.</p>
+<h2>Tiere</h2>
+<p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
+<video src="Puppies.mp4" controls ></video>
+<p>oder auch wie diese Eule.</p>
+<video src="Owl.mp4" controls ></video>
+<h2>Interessen etc.</h2>
+<p>Das Universum fasziniert mich</p>
+<video src="Earth.mp4" controls ></video>
+<p>Eines von vielen Dingen, die ich mal machen möchte.</p>
+<video src="Paraglider.mp4" controls ></video>
+<p>Dieser Sound soll gruselig sein. Ist er aber meiner Meinung nach nicht. Übrigens zählt Horror nicht zu meinen Lieblings Genres.</p>
+<video src="creepy.mp3" controls ></video>
+<p>Hier noch eine Musik Audio, weil ich Musik mag, wie vermutlich die meisten. habe aber leider keine Audio gefunden, die mir besonders gut gefällt.</p>
+<video src="SilentCrafter.mp3" controls></video> 
+
           <a href="#me">Geh zu meiner Person</a> 
 </body>
 
