--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -8,9 +8,9 @@
 <body>
      <nav>
           <ul>
-               <li><a href="#index.html">Mein Portfolio</a></li>
-               <li><a href="#Kontakt.html">Kontakt</a></li>
-               <li><a href="#Über_mich.html">Über mich</a></li>
+               <li><a href="index.html">Mein Portfolio</a></li>
+               <li><a href="Kontakt.html">Kontakt</a></li>
+               <li><a href="Über_mich.html">Über mich</a></li>
           </ul>
      </nav>
     <h1>Meine Blender Arbeiten</h1>
