--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -15,7 +15,7 @@
      </nav>
      <h1>Kontakt</h1>
      <h2>Sie können mich über Instagram kontaktieren...</h2>
-    <a href="https://www.instagram.com/thats.anni/"><img src="instalogo.jpg" alt="Das Logo von Instagram"></a>
+    <a href="https://www.instagram.com/thats.anni/"><img src="Instalogo.jpg" alt="Das Logo von Instagram"></a>
     <p>Auch auf anderen sozialen Medien bin ich:)</p>
     <video src="socialmedia" controls ></video>
     <p>Dazu passend:</p>
