--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -22,7 +22,9 @@
     <h1> Unser Planspiel-Unternehmen </h2>
      <p>Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen stellen kann.
           Es gibt viele verschiedene Sorten wie Schokolade, Spinat, Rind uvm.</p>
-     <img src="Plakat.pdf" alt="Unser Maultaschen-Unternehmen">
+          <object data="Plakat.pdf" style="width:100%;height:300px">
+               <a href="Plakat.pdf">PDF laden</a>
+             </object>
      <p>Hier habe ich mithilfe des positiv-negativ Verfahrens etwas zu dem 100 jährigen Jubiläum von Bauhaus erstellt.</p>
      <img src="Bauhaus.png" alt="Bauhaus 100 Jahre Jubiläum">
 
