--- a/Aufgabe1.2/Über_mich.html
+++ b/Aufgabe1.2/Über_mich.html
@@ -21,7 +21,7 @@
      <p> Ich studiere Online Medien im zweiten Semester. Dies ist eine Mischung zwischen Medienkonzeption und Medieninformatik. </p>
 <h2>Tiere</h2>
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
-<video src="Puppies.mp4" controls ></video>
+<video src="Puppies1.mp4" controls ></video>
 <p>oder auch wie diese Eule.</p>
 <video src="Owl.mp4" controls ></video>
 <h2>Interessen etc.</h2>
