--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -22,7 +22,7 @@
     <h1> Unser Planspiel-Unternehmen </h2>
      <p>Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen stellen kann.
           Es gibt viele verschiedene Sorten wie Schokolade, Spinat, Rind uvm.</p>
-          <object data="Plakat.pdf" style="width:150px;height:300px">
+          <object data="Plakat.pdf" style="width:100%;height:300px">
                <a href="Plakat.pdf">PDF laden</a>
              </object>
      <p>Hier habe ich mithilfe des positiv-negativ Verfahrens etwas zu dem 100 jährigen Jubiläum von Bauhaus erstellt.</p>
