--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
 <meta charset="utf-8">
 <title>Annika</title>
@@ -15,15 +15,15 @@
      </nav>
      <h1>Kontakt</h1>
      <h2>Sie können mich über Instagram kontaktieren...</h2>
-    <a href="https://www.instagram.com/thats.anni/"><img src="Instalogo.jpg" alt="Das Logo von Instagram"></a>
+    <a href="https://www.instagram.com/thats.anni/"><img src="Medien/Instalogo.jpg" alt="Das Logo von Instagram"></a>
     <p>Auch auf anderen sozialen Medien bin ich:)</p>
-    <video src="socialmedia.mp4" controls ></video>
+    <video src="Medien/socialmedia.mp4" controls alt="Dies ist ein Video"></video>
     <p>Dazu passend:</p>
-    <img src="subscribe.jpg" >
+    <img src="Medien/subscribe.jpg" alt="Subscribe">
     <p>Derzeit wohne ich im schönen Schwarzwald.</p>
-    <img src="schwarzwald.jpg">
+    <img src="Medien/schwarzwald.jpg" alt="Ein Bild vom Schwarzwald">
     <p>Aber eigentlich komme ich von dem Bodensee.</p>
-    <img src="bodensee.jpg">
+    <img src="Medien/bodensee.jpg" alt="Ein Bild vom Bodensee">
     <p>Das wars zu meiner Person & meinem Kontakt!</p>
 
 </body>
