--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -15,18 +15,18 @@
      </nav>
     <h1>Meine Blender Arbeiten</h1>
     <p> Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein U-Boot. <br>
-    <img src="ubootss.jpg" alt="Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein wunderschönes U-Boot.">
+    <img src="Medien/ubootss.jpg" alt="Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein wunderschönes U-Boot.">
     <p> Meine zweite Abgabe: Eine Schatztruhe mit einer Axt darin.    <br>
-     <img src="truhe.jpg" alt="Meine zweite Abgabe: Eine Schatzttruhe mit Axt.">
+     <img src="Medien/truhe.jpg" alt="Meine zweite Abgabe: Eine Schatzttruhe mit Axt.">
     <p> Derzeit arbeite ich noch an meiner dritten Abgabe in Computergrafik & 3D-Modellierung. </p> 
     <h2> Unser Planspiel-Unternehmen </h2>
      <p>Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen stellen kann.
           Es gibt viele verschiedene Sorten wie Schokolade, Spinat, Rind uvm.</p>
-          <object data="Plakat.pdf" style="width:600px;height:450px">
-               <a href="Plakat.pdf">PDF laden</a>
+          <object data="Medien/Plakat.pdf" style="width:600px;height:450px">
+               <a href="Medien/Plakat.pdf">PDF laden</a>
              </object>
      <p>Hier habe ich mithilfe des positiv-negativ Verfahrens etwas zu dem 100 jährigen Jubiläum von Bauhaus erstellt.</p>
-     <img src="Bauhaus.png" alt="Bauhaus 100 Jahre Jubiläum">
+     <img src="Medien/Bauhaus.png" alt="Bauhaus 100 Jahre Jubiläum">
 
 </body>
 
