--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -10,14 +10,14 @@
           <ul>
                <li><a href="index.html">Mein Portfolio</a></li>
                <li><a href="Kontakt.html">Kontakt</a></li>
-               <li><a href="Über_mich.html">Über mich</a></li>
+               <li><a href="Ueber_mich.html">Über mich</a></li>
           </ul>
      </nav>
      <h1>Kontakt</h1>
      <h2>Sie können mich über Instagram kontaktieren...</h2>
     <a href="https://www.instagram.com/thats.anni/"><img src="Medien/Instalogo.jpg" alt="Das Logo von Instagram"></a>
     <p>Auch auf anderen sozialen Medien bin ich:)</p>
-    <video src="Medien/socialmedia.mp4" controls alt="Dies ist ein Video"></video>
+    <video src="Medien/socialmedia.mp4" controls></video>
     <p>Dazu passend:</p>
     <img src="Medien/subscribe.jpg" alt="Subscribe">
     <p>Derzeit wohne ich im schönen Schwarzwald.</p>
