--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -10,7 +10,7 @@
           <ul>
                <li><a href="index.html">Mein Portfolio</a></li>
                <li><a href="Kontakt.html">Kontakt</a></li>
-               <li><a href="Über_mich.html">Über mich</a></li>
+               <li><a href="Ueber_mich.html">Über mich</a></li>
           </ul>
      </nav>
      <h1>Das ist meine Website</h1>
@@ -22,6 +22,10 @@
 <h2>Tiere</h2>
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
 <video src="Medien/Puppies1.mp4" controls ></video>
+<button>
+     <p>Hundis adoptieren</p>
+     <a href="https://www.tiervermittlung.de/hundewelpen"  target=”_blank”></a>
+</button>
 <p>oder auch wie diese Eule.</p>
 <video src="Medien/Owl.mp4" controls ></video>
 <h2>Interessen etc.</h2>
@@ -30,9 +34,9 @@
 <p>Eines von vielen Dingen, die ich mal machen möchte.</p>
 <video src="Medien/Paraglider.mp4" controls ></video>
 <p>Dieser Sound soll gruselig sein. Ist er aber meiner Meinung nach nicht. Übrigens zählt Horror nicht zu meinen Lieblings Genres.</p>
-<video src="Medien/creepy.mp3" controls ></video>
+<audio controls></audio><source src="Medien/creepy.mp3" type="audio/mp3"></source></audio>
 <p>Hier noch eine Musik Audio, weil ich Musik mag, wie vermutlich die meisten. habe aber leider keine Audio gefunden, die mir besonders gut gefällt.</p>
-<video src="Medien/SilentCrafter.mp3" controls></video> 
+<audio controls><source src="Medien/SilentCrafter.mp3" type="audio/mp3"></source></audio>
 
           <a href="#me">Geh zu meiner Person</a> 
 </body>
