--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -21,10 +21,9 @@
      <p> Ich studiere Online Medien im zweiten Semester. Dies ist eine Mischung zwischen Medienkonzeption und Medieninformatik. </p>
 <h2>Tiere</h2>
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
-<video src="Medien/Puppies1.mp4" controls ></video>
+<video src="Medien/Puppies1.mp4" controls ></video> <br>
 <button>
-     <p>Hundis adoptieren</p>
-     <a href="https://www.tiervermittlung.de/hundewelpen"  target=”_blank”></a>
+     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>Hundis adoptieren</a>
 </button>
 <p>oder auch wie diese Eule.</p>
 <video src="Medien/Owl.mp4" controls ></video>
