--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -23,10 +23,13 @@
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
 <video src="Medien/Puppies1.mp4" controls ></video> <br>
 <button>
-     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>Hundis adoptieren</a>
+     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”></a>
+     <p>Hundis adoptieren</p>
 </button>
 <p>oder auch wie diese Eule.</p>
 <video src="Medien/Owl.mp4" controls ></video>
+<p>Katzen finde ich auch super toll.</p>
+<video src="Medien/Kadse.webm"></video>
 <h2>Interessen etc.</h2>
 <p>Das Universum fasziniert mich</p>
 <video src="Medien/Earth.mp4" controls ></video>
