--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -29,7 +29,7 @@
 <p>oder auch wie diese Eule.</p>
 <video src="Medien/Owl.mp4" controls ></video>
 <p>Katzen finde ich auch super toll.</p>
-<video src="Medien/Kadse.webm"></video>
+<video src="Medien/Kadse.webm" controls></video>
 <h2>Interessen etc.</h2>
 <p>Das Universum fasziniert mich</p>
 <video src="Medien/Earth.mp4" controls ></video>
