--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -21,22 +21,22 @@
      <p> Ich studiere Online Medien im zweiten Semester. Dies ist eine Mischung zwischen Medienkonzeption und Medieninformatik. </p>
 <h2>Tiere</h2>
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
-<video src="Medien/Puppies1.mp4" controls ></video> <br>
+<video src="Medien/Puppies1.mp4" controls autoplay></video> <br>
 <button>
      <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”></a>
      <p>Hundis adoptieren</p>
 </button>
 <p>oder auch wie diese Eule.</p>
-<video src="Medien/Owl.mp4" controls ></video>
+<video src="Medien/Owl.mp4" controls autoplay></video>
 <p>Katzen finde ich auch super toll.</p>
-<video src="Medien/Kadse.webm" controls></video>
+<video src="Medien/Kadse.webm" controls muted loop autoplay></video>
 <h2>Interessen etc.</h2>
 <p>Das Universum fasziniert mich</p>
 <video src="Medien/Earth.mp4" controls ></video>
 <p>Eines von vielen Dingen, die ich mal machen möchte.</p>
 <video src="Medien/Paraglider.mp4" controls ></video>
 <p>Dieser Sound soll gruselig sein. Ist er aber meiner Meinung nach nicht. Übrigens zählt Horror nicht zu meinen Lieblings Genres.</p>
-<audio controls></audio><source src="Medien/creepy.mp3" type="audio/mp3"></source></audio>
+<audio controls><source src="Medien/creepy.mp3" type="audio/mp3"></source></audio>
 <p>Hier noch eine Musik Audio, weil ich Musik mag, wie vermutlich die meisten. habe aber leider keine Audio gefunden, die mir besonders gut gefällt.</p>
 <audio controls><source src="Medien/SilentCrafter.mp3" type="audio/mp3"></source></audio>
 
