--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -23,11 +23,13 @@
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
 <video src="Medien/Puppies1.mp4" controls autoplay></video> <br>
 <button>
-     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”></a>
-     <p>Hundis adoptieren</p>
+     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>
+          <p>Hundis adoptieren</p>
+     </a>
+     
 </button>
 <p>oder auch wie diese Eule.</p>
-<video src="Medien/Owl.mp4" controls autoplay></video>
+<video src="Medien/Owl.mp4" controls></video>
 <p>Katzen finde ich auch super toll.</p>
 <video src="Medien/Kadse.webm" controls muted loop autoplay></video>
 <h2>Interessen etc.</h2>
