--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -15,7 +15,10 @@
      </nav>
      <h1>Kontakt</h1>
      <h2>Sie können mich über Instagram kontaktieren...</h2>
-    <a href="https://www.instagram.com/thats.anni/"><img src="Medien/Instalogo.jpg" alt="Das Logo von Instagram"></a>
+    <a href="https://www.instagram.com/thats.anni/" target="_blank"><img src="Medien/Instalogo.jpg" alt="Das Logo von Instagram"></a>
+    <h2>Anschreiben könnt Ihr mich auf Discord!</h2>
+    <img src="Medien/Discord.gif" alt="DiscordGIF"></img>
+    <p>@ franzinex#7099</p>
     <p>Auch auf anderen sozialen Medien bin ich:)</p>
     <video src="Medien/socialmedia.mp4" controls></video>
     <p>Dazu passend:</p>
