--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -13,12 +13,17 @@
                <li><a href="Ueber_mich.html">Über mich</a></li>
           </ul>
      </nav>
+
+     <h1>Hi!</h1>
+     <img src="Medien/tenor.gif" alt="Tanz"></img>
     <h1>Meine Blender Arbeiten</h1>
     <p> Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein U-Boot. <br>
     <img src="Medien/ubootss.jpg" alt="Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein wunderschönes U-Boot.">
     <p> Meine zweite Abgabe: Eine Schatztruhe mit einer Axt darin.    <br>
      <img src="Medien/truhe.jpg" alt="Meine zweite Abgabe: Eine Schatzttruhe mit Axt.">
-    <p> Derzeit arbeite ich noch an meiner dritten Abgabe in Computergrafik & 3D-Modellierung. </p> 
+     
+    <p> Meine dritte Abgabe: Eine Koralle, ein Seeigel und eine Seegurke.</p> 
+    <img src="Medien/KorallenFertig.png" alt="Korallen">
     <h2> Unser Planspiel-Unternehmen </h2>
      <p>Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen stellen kann.
           Es gibt viele verschiedene Sorten wie Schokolade, Spinat, Rind uvm.</p>
