--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -22,7 +22,7 @@
     <p> Meine zweite Abgabe: Eine Schatztruhe mit einer Axt darin.    <br>
      <img src="Medien/truhe.jpg" alt="Meine zweite Abgabe: Eine Schatzttruhe mit Axt.">
      
-    <p> Meine dritte Abgabe: Eine Koralle, ein Seeigel und eine Seegurke.</p> 
+    <p> Meine dritte Abgabe: Eine Seegurke, eine Koralle und ein Seeigel.</p> 
     <img src="Medien/KorallenFertig.png" alt="Korallen">
     <h2> Unser Planspiel-Unternehmen </h2>
      <p>Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen stellen kann.
