--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -17,7 +17,7 @@
      <h2>Sie können mich über Instagram kontaktieren...</h2>
     <a href="https://www.instagram.com/thats.anni/" target="_blank"><img src="Medien/Instalogo.jpg" alt="Das Logo von Instagram"></a>
     <h2>Anschreiben könnt Ihr mich auf Discord!</h2>
-    <img src="Medien/Discord.gif" alt="DiscordGIF"></img>
+    <img src="Medien/Discord.gif" alt="DiscordGIF">
     <p>@</p> <h4>franzinex#7099</h4>
     <p>Auch auf anderen sozialen Medien bin ich:)</p>
     <video src="Medien/socialmedia.mp4" controls></video>
@@ -31,7 +31,7 @@
     <br>
     
     <p>Bis dann!</p>
-    <img src="Medien/Snoopy.gif" alt="Snoopy"></img>
+    <img src="Medien/Snoopy.gif" alt="Snoopy">
 </body>
 
 </html> 
