--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -22,8 +22,7 @@
 <h2>Tiere</h2>
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
 <video src="Medien/Puppies1.mp4" controls autoplay></video> <br>
-<button>
-     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>
+<button href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>
           <p>Hundis adoptieren</p>
      </a>
      
@@ -38,9 +37,9 @@
 <p>Eines von vielen Dingen, die ich mal machen möchte.</p>
 <video src="Medien/Paraglider.mp4" controls ></video>
 <p>Dieser Sound soll gruselig sein. Ist er aber meiner Meinung nach nicht. Übrigens zählt Horror nicht zu meinen Lieblings Genres.</p>
-<audio controls><source src="Medien/creepy.mp3" type="audio/mp3"></source></audio>
+<audio controls><source src="Medien/creepy.mp3" type="audio/mp3"></audio>
 <p>Hier noch eine Musik Audio, weil ich Musik mag, wie vermutlich die meisten. habe aber leider keine Audio gefunden, die mir besonders gut gefällt.</p>
-<audio controls><source src="Medien/SilentCrafter.mp3" type="audio/mp3"></source></audio>
+<audio controls><source src="Medien/SilentCrafter.mp3" type="audio/mp3"></audio>
 
           <a href="#me">Geh zu meiner Person</a> 
 </body>
