--- a/Aufgabe1.2/index.html
+++ b/Aufgabe1.2/index.html
@@ -15,7 +15,7 @@
      </nav>
 
      <h1>Hi!</h1>
-     <img src="Medien/tenor.gif" alt="Tanz"></img>
+     <img src="Medien/tenor.gif" alt="Tanz">
     <h1>Meine Blender Arbeiten</h1>
     <p> Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein U-Boot. <br>
     <img src="Medien/ubootss.jpg" alt="Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein wunderschönes U-Boot.">
