--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -22,10 +22,8 @@
 <h2>Tiere</h2>
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
 <video src="Medien/Puppies1.mp4" controls autoplay></video> <br>
-<button href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>
-          <p>Hundis adoptieren</p>
-     </a>
-     
+<button>
+     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>Hundis adoptieren</a>
 </button>
 <p>oder auch wie diese Eule.</p>
 <video src="Medien/Owl.mp4" controls></video>
