--- a/Aufgabe1.2/Kontakt.html
+++ b/Aufgabe1.2/Kontakt.html
@@ -18,7 +18,7 @@
     <a href="https://www.instagram.com/thats.anni/" target="_blank"><img src="Medien/Instalogo.jpg" alt="Das Logo von Instagram"></a>
     <h2>Anschreiben könnt Ihr mich auf Discord!</h2>
     <img src="Medien/Discord.gif" alt="DiscordGIF">
-    <p>@</p> <h4>franzinex#7099</h4>
+    <h3>@ franzinex#7099</h3>
     <p>Auch auf anderen sozialen Medien bin ich:)</p>
     <video src="Medien/socialmedia.mp4" controls></video>
     <p>Dazu passend:</p>
