--- a/Aufgabe1.2/Ueber_mich.html
+++ b/Aufgabe1.2/Ueber_mich.html
@@ -22,9 +22,9 @@
 <h2>Tiere</h2>
 <p>Ich mag Tiere sehr gerne, wie diese Hunde beispielsweise</p>
 <video src="Medien/Puppies1.mp4" controls autoplay></video> <br>
-<button>
-     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>Hundis adoptieren</a>
-</button>
+
+     <a href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”><button>Hundis adoptieren</button></a>
+     
 <p>oder auch wie diese Eule.</p>
 <video src="Medien/Owl.mp4" controls></video>
 <p>Katzen finde ich auch super toll.</p>
