--- a/Aufgabe1.3/index.html
+++ b/Aufgabe1.3/index.html
@@ -1,38 +1,125 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
+
 <head>
-<meta charset="utf-8">
-<title>Portfolio</title>
-<link rel="stylesheet" href="Stylesheet.css">
+     <meta charset="utf-8">
+     <title>Portfolio</title>
+     <link rel="stylesheet" href="Stylesheet.css">
 </head>
 
 <body>
      <div class="Navbar">
-          <a href="index.html">Mein Portfolio</a>
-          <a href="Kontakt.html">Kontakt</a>
+          <a id="Pfusch" class="current" href="index.html">Mein Portfolio</a>          
           <a href="Ueber_mich.html">Über mich</a>
+          <a href="Kontakt.html">Kontakt</a>
+          <div>
+               <a href="https://www.instagram.com/thats.anni/" target="_blank"><img id="Insta"
+                         src="Medien/instagram-new--v1.png" alt="Insta"></a>
+          </div>
+          <div>
+               <a href="https://discordapp.com/channels/@me/832988888481660948/" target="_blank"><img id="Discord"
+                         src="Medien/discord-logo.png" alt="Discord"></a>
+          </div>
           <img id="Krone" src="Medien/Krone.png" alt="König">
+     </div>
+
+     <header>
+          <video id="Header" src="Medien/you.mp4" autoplay></video>
+
+     </header>
+
+     <div id="Content">
+          <h1>Willkommen!</h1>
+          <img src="Medien/tenor.gif" alt="Tanz">
+          <h2>Hier können Sie meine ersten Blender Arbeiten sehen!</h1>
+               <div class="Imagecontainer">
+                    <img class="Blenderbilder" src="Medien/ubootss.png"
+                         alt="Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein wunderschönes U-Boot.">
+                    <div class="Imagetext">
+                         <h3>U-Boot</h3>
+                         <p> Meine erste Abgabe! </p>
+                    </div>
+               </div>
+               <div class="Imagecontainer">
+
+                    <img class="Blenderbilder" src="Medien/truhe.png" alt="Truhe">
+                    <div class="Imagetext">
+                         <h3>Schatztruhe</h3>
+                         <p> Meine zweite Abgabe! </p>
+                    </div>
+               </div>
+
+               <div class="Imagecontainer">
+
+                    <img class="Blenderbilder" src="Medien/KorallenFertig.png" alt="Korallen">
+                    <div class="Imagetext">
+                         <h3>Seegurke, Koralle
+                              <br>& Seeigel
+                         </h3>
+                         <p> Meine dritte Abgabe! </p>
+                    </div>
+               </div>
+
+               <div class="Imagecontainer">
+                    <img class="Blenderbilder" src="Medien/wasser.png" alt="Wasserwelt">
+                    <div class="Imagetext">
+                         <h3>Unterwasserwelt</h3>
+                         <p> Meine vierte Abgabe! </p>
+                    </div>
+               </div>
+
+
+               <h2> Unser Planspiel-Unternehmen </h2>
+               <p>Dieses Unternehmen haben wir im ersten Semester geplant.
+                    Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen
+                    stellen
+                    kann.
+                    Es gibt viele verschiedene Teigsorten und Füllungen wie Dinkel, Schokolade, Spinat, Rind, vegan uvm.
+                    Innerhalb 48h bekommt man seine gewünschten Maultaschen in ganz Deutschland geliefert.
+                    Ich hatte die Aufgaben des Wirtschaftsberaters und habe mich hauptsächlich um Marketing und
+                    Berechnungen
+                    gekümmert.
+               </p>
+               <object id="Pdf" data="Medien/Plakat.pdf">
+                    <a href="Medien/Plakat.pdf">PDF laden</a>
+               </object>
+
+               <h2>Bauhaus-Jubiläum</h2>
+               <div id="Bauhauscontainer">
+                    <div id="Bauhaustext">
+                         <p>Hier habe ich mithilfe des positiv-negativ Verfahrens etwas zu dem 100 jährigen Jubiläum von
+                              Bauhaus
+                              erstellt.
+                              <br>
+                              Dies war noch zu meiner Schulzeit. Hat Spaß gemacht!
+                         </p>
+                    </div>
+                    <img id="Bauhaus" src="Medien/Bauhaus.png" alt="Bauhaus 100 Jahre Jubiläum">
+               </div>
+     </div>
+
+     <h2>Früher vs. heute</h2>
+     <div id="Saulgaucontainer">
+          <div id="Saulgautext">
+               <p>Hier habe ich Bilder von früher (ca. 1850-1930) in Saulgau nachgestellt. 
+                    <br>
+                    Natürlich mit einer Analog-Kamera!
+               </p>
+          </div>
+          <img id="Saulgau1" src="Medien/saulgau1.jpg" alt="Bad Saulgau">
+     </div>
 </div>
-
-     <h1>Hi!</h1>
-     <img src="Medien/tenor.gif" alt="Tanz">
-    <h1>Meine Blender Arbeiten</h1>
-    <p> Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein U-Boot. <br>
-    <img src="Medien/ubootss.jpg" alt="Meine erste Abgabe in Computergrafik & 3D-Modellierung: Ein wunderschönes U-Boot.">
-    <p> Meine zweite Abgabe: Eine Schatztruhe mit einer Axt darin.    <br>
-     <img src="Medien/truhe.jpg" alt="Meine zweite Abgabe: Eine Schatzttruhe mit Axt.">
-     
-    <p> Meine dritte Abgabe: Eine Seegurke, eine Koralle und ein Seeigel.</p> 
-    <img src="Medien/KorallenFertig.png" alt="Korallen">
-    <h2> Unser Planspiel-Unternehmen </h2>
-     <p>Die Taschenmacher GmbH bietet einen Online Versand an, in dem man Maultaschen selber zusammen stellen kann.
-          Es gibt viele verschiedene Sorten wie Schokolade, Spinat, Rind uvm.</p>
-          <object data="Medien/Plakat.pdf" style="width:600px;height:450px">
-               <a href="Medien/Plakat.pdf">PDF laden</a>
-             </object>
-     <p>Hier habe ich mithilfe des positiv-negativ Verfahrens etwas zu dem 100 jährigen Jubiläum von Bauhaus erstellt.</p>
-     <img src="Medien/Bauhaus.png" alt="Bauhaus 100 Jahre Jubiläum">
-
+<div id="Saulgaucontainer">
+     <div id="Saulgautext2">
+          <p>Vieles hat sich verändert, aber einiges sieht noch fast genau gleich aus.  
+               <br>
+               <p>Hab mein damaliges Auto auf dem Foto platziert.</p>
+          
+          </p>
+     </div>
+     <img id="Saulgau2" src="Medien/saulgau2.jpg" alt="Bad Saulgau">
+</div>
+</div>
 </body>
 
-</html> 
+</html>
