--- a/Aufgabe1.3/Kontakt.html
+++ b/Aufgabe1.3/Kontakt.html
@@ -37,12 +37,16 @@
 
         <h1>Kontakt</h1>
         <p>Bin auf vielen sozialen Medien.</p>
-        <video src="Medien/socialmedia.mp4" controls></video>
+        <video class="Bildermaxwidth" src="Medien/socialmedia.mp4" controls></video>
         <p>Derzeit wohne ich im Schwarzwald.</p>
-        <img src="Medien/schwarzwald.jpg" alt="Ein Bild vom Schwarzwald">
+        <img class="Bildermaxwidth"  src="Medien/schwarzwald.jpg" alt="Ein Bild vom Schwarzwald">
+        
+        <p>Leider ohne Katze :(</p>
+        <img class="Bildermaxwidth"  src="Medien/Freche_Katze.gif" alt="katze">
         <p>Aber eigentlich komme ich von dem Bodensee.</p>
-        <img src="Medien/bodensee.jpg" alt="Ein Bild vom Bodensee">
-        <p>Das wars zu meiner Person & meinem Kontakt!</p>
+        <img class="Bildermaxwidth"  src="Medien/bodensee.jpg" alt="Ein Bild vom Bodensee">
+        <h2>Das wars zu meiner Person!</h2>
+        <p>Hier können Sie mich kontaktieren.</p>
         <br>
         <div id="Kontaktform">
             <form id="kontaktformular" name="kontaktformular" action="">
