--- a/Aufgabe1.3/Ueber_mich.html
+++ b/Aufgabe1.3/Ueber_mich.html
@@ -56,7 +56,7 @@
           <h2>Das ist Felix!</h2>
           <img class="Medien" src="Medien/felix.jpg" alt="Felix">
 
-          
+
           <h2>Mehr Tiere!</h2>
           <video class="Medien" src="Medien/Puppies1.mp4" controls autoplay></video> <br>
           <a class="adopt" href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>Hundis adoptieren</a>
@@ -93,28 +93,30 @@
                </div>
           </div>
 
-          <h2>Kunst</h2>
-          <p>Ich zeichne und male sehr gerne, wenn ich die Zeit dafür habe.
-               <br>
+          <div id="Kunst">
+               <h2>Kunst</h2>
+               <p>Ich zeichne und male sehr gerne, wenn ich die Zeit dafür habe.
+                    <br>
                <p>Das habe ich zum Beispiel mal gezeichnet.</p>
                <img id="flower" src="Medien/blumen.jpg" alt="Roses">
-               
+
                <h2>Festivals</h2>
                <p>Hoffentlich bald wieder möglich...</p>
                <img id="Holi" src="Medien/holi.jpg" alt="Holi">
-          </p> 
-          <h2>Familie</h2>
-          <p>Meine Familie ist mir wichtig und ich unternehme gerne etwas mit ihnen.</p>
-          <img class="Familie" src="Medien/familie.jpg" alt="Familie">
-          <img class ="Familie" src="Medien/polaroidmum.jpg" alt="Polaroid">
-          <p>Wir gehen normalerweise oft miteinander essen.</p>
-          <img class="Familie" src="Medien/food.jpg" alt="Essen">
-          <br>
-          <img class="Familie" src="Medien/motorrad.jpg" alt="motorrad">
-          <a class="button" href="#me">Geh zu meiner Person</a>
+               </p>
+               <h2>Familie</h2>
+               <p>Meine Familie ist mir wichtig und ich unternehme gerne etwas mit ihnen.</p>
+               <img class="Familie" src="Medien/familie.jpg" alt="Familie">
+               <img class="Familie" src="Medien/polaroidmum.jpg" alt="Polaroid">
+               <img class="Bildermaxwidth" src="Medien/motorrad.jpg" alt="motorrad">
+               <p>Wir gehen normalerweise oft miteinander essen.</p>
+               <img class="Bildermaxwidth" src="Medien/food.jpg" alt="Essen">
+               <br>
 
+          </div>
      </div>
 
+     <a class="button" href="#me">Geh zu meiner Person</a>
 </body>
 
 </html>
