--- a/Aufgabe1.3/Kontakt.html
+++ b/Aufgabe1.3/Kontakt.html
@@ -49,7 +49,7 @@
         <p>Hier können Sie mich kontaktieren.</p>
         <br>
         <div id="Kontaktform">
-            <form id="kontaktformular" name="kontaktformular" action="">
+            <form id="kontaktformular" name="kontaktformular" >
                 <div>
                     <input type="text" id="Vorname" class="Input" name="Vorname" placeholder="Vorname" />
                 </div>
