--- a/Aufgabe1.3/Ueber_mich.html
+++ b/Aufgabe1.3/Ueber_mich.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Annika</title>
+     <title>Annikas Über Mich</title>
      <link rel="stylesheet" href="Stylesheet.css">
 </head>
 
@@ -62,7 +62,7 @@
           <a class="adopt" href="https://www.tiervermittlung.de/hundewelpen" target=”_blank”>Hundis adoptieren</a>
           <video class="Medien" src="Medien/Owl.mp4" controls></video>
           <a class="adopt" href="http://www.falknerei-eulenhof.de/" target=”_blank”>Eulenshow!</a>
-          <video class="Medien" src="Medien/Kadse.webm" controls muted loop autoplay></video>
+          <video title="Kadse" src="Medien/Kadse.webm" controls muted loop autoplay></video>
           <a class="adopt"
                href="https://www.deine-tierwelt.de/kleinanzeigen/katzen-aus-dem-tierheim-tierschutz-c102771/"
                target=”_blank”>Kadsen adoptieren</a>
