--- a/Aufgabe1.3/index.html
+++ b/Aufgabe1.3/index.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Portfolio</title>
+     <title>Annikas Portfolio</title>
      <link rel="stylesheet" href="Stylesheet.css">
 </head>
 
@@ -80,7 +80,7 @@
                Berechnungen
                gekümmert.
           </p>
-          <object id="Pdf" data="Medien/Plakat.pdf">
+          <object data="Medien/Plakat.pdf">
                <a href="Medien/Plakat.pdf">PDF laden</a>
           </object>
 
