--- a/Aufgabe1.3/Kontakt.html
+++ b/Aufgabe1.3/Kontakt.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Annika</title>
+    <title>Annikas Kontakt</title>
     <link rel="stylesheet" href="Stylesheet.css">
 </head>
 
@@ -51,13 +51,13 @@
         <div id="Kontaktform">
             <form id="kontaktformular" name="kontaktformular" >
                 <div>
-                    <input type="text" id="Vorname" class="Input" name="Vorname" placeholder="Vorname" />
+                    <input type="text" class="Input" name="Vorname" placeholder="Vorname">
                 </div>
                 <div>
-                    <input type="text" id="Nachname" class="Input" name="Nachname" placeholder="Nachname" />
+                    <input type="text" class="Input" name="Nachname" placeholder="Nachname">
                 </div>
                 <div>
-                    <input type="email" id="Email" class="Input" name="Email" placeholder="E-Mail" />
+                    <input type="email" class="Input" name="Email" placeholder="E-Mail">
                 </div>
                 <div>
 
