--- a/Aufgabe2.3/index.html
+++ b/Aufgabe2.3/index.html
@@ -8,6 +8,20 @@
     <script src="script.js" defer></script>
     <canvas id="myFirstCanvas" width="500" height="400"></canvas>
 </head>
+<head>
+    <meta charset="utf-8">
+    <title>Food</title>
+    <link rel="stylesheet" href="Stylesheet.css">
+</head>
+
+<body>
+    <div class="Navbar">
+         <a id="Pfusch" class="current" href="index.html">Food Sorte</a>
+         <a href="Belag.html">Belag</a>
+         <a href="TopBelag.html">Top</a>
+         
+         <img id="Krone" src="Medien/Krone.png" alt="König">
+    </div>
 <body>
     
 </body>
