--- a/Aufgabe2.3/index.html
+++ b/Aufgabe2.3/index.html
@@ -1,28 +1,22 @@
+lines (17 sloc) 440 Bytes
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js" defer></script>
-    <canvas id="myFirstCanvas" width="500" height="400"></canvas>
-</head>
-<head>
-    <meta charset="utf-8">
-    <title>Food</title>
-    <link rel="stylesheet" href="Stylesheet.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Aufgabe 1</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="script.js" defer></script>
+
 </head>
 
 <body>
-    <div class="Navbar">
-         <a id="Pfusch" class="current" href="index.html">Food Sorte</a>
-         <a href="Belag.html">Belag</a>
-         <a href="TopBelag.html">Top</a>
-         
-         <img id="Krone" src="Medien/Krone.png" alt="König">
-    </div>
-<body>
-    
+	<button id="add">Add Rectangle</button>
+	<button id="reset">Reset</button>
+	<div id="putRectsHere">
+	</div>
+
 </body>
+
 </html>
