--- a/Aufgabe3.1/index.html
+++ b/Aufgabe3.1/index.html
@@ -11,12 +11,12 @@
 <body>
     <h2>Formular</h2>
     <form name="kontaktformular"></form>
-    
-            <input type="text" class="Input" name="Vorname" placeholder="Vorname">
-
-            <input type="text" class="Input" name="Nachname" placeholder="Nachname">
-    >
-            <input type="email" class="Input" name="Email" placeholder="E-Mail">
+    <label for="Vorname"> Vorname</label>
+            <input type="text" name="Vorname" placeholder="Vorname">
+<label for="Nachname">Nachname</label>
+            <input type="text"  name="Nachname" placeholder="Nachname">
+            <label for="Email">Email</label>
+            <input type="email" name="Email" placeholder="E-Mail">
             <button type="button" id="button">Absenden</button>
 
     </form>
