--- a/Aufgabe3.1/index.html
+++ b/Aufgabe3.1/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h2>Formular</h2>
-    <form name="kontaktformular"></form>
+    <form name="kontaktformular">
     <label for="Vorname"> Vorname</label>
             <input type="text" name="Vorname" placeholder="Vorname">
 <label for="Nachname">Nachname</label>
