--- a/Aufgabe3.2/index.html
+++ b/Aufgabe3.2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Formular</h1>
-    <form action="https://akgis.herokuapp.com/" method="GET">
+    <form action="https://akgis.herokuapp.com" method="GET">
         <label for="name">Name</label>
         <input  type="text" name="name">    
         <label for="email">Mail</label>                    
