--- a/Aufgabe3.2/index.html
+++ b/Aufgabe3.2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="client/script.js" defer></script>
-    <title>Startseite 3</title>
+    <title>Startseite </title>
 </head>
 <body>
     <h1>Formular</h1>
