--- a/Aufgabe3.4/index.html
+++ b/Aufgabe3.4/index.html
@@ -16,8 +16,8 @@
         <input  type="email" name="email">   
         <label for="subject">Subject</label>            
         <input  type="text" name="subject">                      
-        <button type="button" id="htmlbutton"> Send Data </button>
-        <button type="button" id="jsonbutton"> Get Data </button>
+        <button type="button" id="sendbutton"> Send Data </button>
+        <button type="button" id="getbutton"> Get Data </button>
     </form>
     <h1>Data</h1>
     <p id="answer"></p>
